update swagger, add test data, service and controller
