# server.js
@@ -7,8 +7,8 @@ const cors = require('cors');
 const errorHandler = require('_middleware/error-handler');
 
 // create test user in db on startup if required
-const createTestUser = require('_helpers/create-test-user');
-createTestUser();
+const createTestData = require('_helpers/create-test-data');
+createTestData();
 
 app.use(bodyParser.urlencoded({ extended: false }));
 app.use(bodyParser.json());
@@ -19,6 +19,7 @@ app.use(cors({ origin: (origin, callback) => callback(null, true), credentials: 
 
 // api routes
 app.use('/users', require('./users/users.controller'));
+app.use('/booking', require('./booking/booking.controller'));
 
 // swagger docs route
 app.use('/api-docs', require('_helpers/swagger'));
